<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:background="@drawable/bg_fragment_top_rounded">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="?attr/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addFolderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="@string/new_folder"
            android:textSize="18sp"
            android:textColor="?attr/colorSurface"
            app:layout_constraintEnd_toStartOf="@id/doneTextView"
            app:layout_constraintStart_toEndOf="@id/cancelTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/doneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/done"
            android:textSize="18sp"
            android:textColor="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_title"
            app:hintTextColor="?attr/colorAccent"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/text_input_layout_stroke_color"
            app:boxStrokeWidth="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancelTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textCursorDrawable="@null"
                android:textColor="?attr/colorSurface"/>

        </com.google.android.material.textfield.TextInputLayout>




        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/typeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/type"
            android:textSize="18sp"
            android:textColor="?attr/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextField" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:checkedButton="@id/radioButtonPriority"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeTextView">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?attr/colorSurface"
                android:text="@string/priority" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonChecklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="?attr/colorSurface"
                android:text="@string/checklist" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:textColor="?attr/colorSurface"
                android:text="@string/note" />

        </RadioGroup>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>