<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_fragment_top_rounded">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textColor="?attr/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headerTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/new_note"
        android:textSize="18sp"
        android:textColor="?attr/colorSurface"
        app:layout_constraintEnd_toStartOf="@id/doneTextView"
        app:layout_constraintStart_toEndOf="@id/cancelTextView"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/doneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/done"
        android:textSize="18sp"
        android:textColor="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lastModifiedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toStartOf="@id/doneTextView"
        app:layout_constraintStart_toEndOf="@id/cancelTextView"
        app:layout_constraintTop_toBottomOf="@id/headerTitleTextView"
        android:visibility="visible"
        tools:text="7/22/23 4:47 PM"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/lastModifiedTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_title"
                app:hintTextColor="?attr/colorAccent"
                app:errorEnabled="true"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                app:boxStrokeWidth="1dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:inputType="textCapSentences"
                    android:textColor="?attr/colorSurface"/>

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="text|textNoSuggestions"
                android:paddingTop="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="8dp"
                android:textColor="?attr/colorSurface"
                android:hint="@string/enter_description_here"
                android:textColorHint="?attr/colorOnSurface"
                app:layout_constraintTop_toBottomOf="@id/titleTextField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>






    </ScrollView>









</androidx.constraintlayout.widget.ConstraintLayout>